--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="images/favicon.ico">
-		<link rel="mask-icon" href="images/favicon.svg" color="#000000">
+		<link rel="mask-icon" href="images/favicon.svg" color="#ec1c2a">
 		<link rel="icon" type="image/png" href="images/favicon.png">
 
 		<!-- SEO meta -->
