--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
 							<p>You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.</p>
 							<p>Your continued use of our website will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.</p>
 							<p>This policy is effective as of 1 January 2020.</p>
-							<h2>Offensive Attitude Terms of Service</h2>
+							
+							<h2>Terms of Service</h2>
 							
 							<h3>1. Terms</h3>
 							<p>By accessing the website at <a href="https://www.offensive-attitude.com/">https://www.offensive-attitude.com/</a>, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
