--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p>You have a project, a question or simply need informations. Don't hesitate to contact us with this form or with social networks.</p>
+							<h3>Choose how you wanna contact us :</h3>
+							<ul>
+								<li><a href="mailto:&#111;%66%66&#46;&#97;&#116;&#116;i&#116;&#117;%64e&#64;%67m%61il%2e&#99;%6f%6d">Email</a></li>
+								<li><a href="https://twitter.com/off_attitude">Private Message via Twitter</a></li>
+								<li><a href="https://www.instagram.com/official.off.att/">Private Message via Instagram</a></li>
+							</ul>
+							<h3>See Ya'</h3>
+							<!--
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
@@ -124,7 +132,7 @@
 									<li><input type="submit" value="Send Message" class="primary" /></li>
 									<li><input type="reset" value="Reset" /></li>
 								</ul>
-							</form>
+							</form> -->
 						</article>
 						
 						<!-- Shop -->
