--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 								<li><a href="https://twitter.com/off_attitude" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/Offensive-Attitude-Producer-100687001628854/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/official.off.att/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCqQzakjwva1S32S4PgQNhJQ" class="icon brands fa-youtube">Youtube</a></li>
 							</ul>
 						</article>
 						
@@ -200,6 +201,7 @@
 							<li><a href="https://twitter.com/off_attitude" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/Offensive-Attitude-Producer-100687001628854/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/official.off.att/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UCqQzakjwva1S32S4PgQNhJQ" class="icon brands fa-youtube">Youtube</a></li>
 						</ul>
 					</div>
 				<!-- Footer -->
