--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<article id="intro">
 							<h2 class="major">Intro</h2>
 							<span class="nofilter main"><img class="" src="images/pic01.png" alt="" /></span>
-							<p>Offensive Attitude is a new french touch collective founded in 2018. It brings together Producers, Beatmakers, Sound Designers and Graphic Designers of all ages and from a wide variety of musical backgrounds. This collective aims to create professional quality resources and samples pack.</p>
+							<p>Offensive Attitude is a new french touch collective founded in 2018. It brings together Producers, Beatmakers, Sound Designers and Graphic Designers with wide variety of musical backgrounds.</p>
 							<h3>Follow us</h3>
 							<ul class="icons">
 								<li><a href="https://twitter.com/off_attitude" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -99,7 +99,7 @@
 						<article id="about">
 							<h2 class="major">About</h2>
 							<span class="nofilter main"><img src="images/pic01.png" alt="" /></span>
-							<p>Offensive Attitude is a new french touch collective founded in 2018. It brings together Producers, Beatmakers, Sound Designers and Graphic Designers of all ages and from a wide variety of musical backgrounds.</p>
+							<p>Offensive Attitude was founded in 2018 by the artist Franck M. a.k.a "Dotty Bear", joined by other artists like ArtFaks, Twin Twice Design and Flygayou in 2019. Most of the members of this collective are designers, musical producers in all kind but above all all with one common thing, la FRENCH TOUCH !!!</p>
 						</article>
 						
 						<!-- Contact -->
